--- a/package.json
+++ b/package.json
@@ -5,5 +5,16 @@
   "main": "index.js",
   "repository": "https://github.com/danorak/button-generator-plugin.git",
   "author": "Dan Jones <danjones2000@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
+  },
+  "devDependencies": {
+    "react-sketchapp": "^2.0.0",
+    "styled-components": "^3.4.2",
+    "styled-system": "^3.0.2",
+    "webpack": "^4.16.5",
+    "webpack-dev-server": "^3.1.5"
+  }
 }
